@startuml
'https://plantuml.com/class-diagram
hide circle
class PlansRepository <<interface>>
class CrudRepository <<interface>>

title Class Diagram / As marketing director, I want to know the price change history of a plan


class Plans{
    -name
    - description
    - numberOfMinutes
    -maximumNumberOfUsers
    -musicCollection
     -musicSuggestion
     -annualFee
     -monthlyFee
     -active
     -promoted
     -feeRevision
}

class FeeRevisionViewMapper{
    +toFeesView(Iterable<FeeRevision> fees):List<FeeRevisionView>
}

class PlansController{
    +history(final String name) :List<FeeRevisionView>
    }
class PlansService{
 +history(String name) :List<FeeRevision>

}

interface PlansRepository extends CrudRepository
{
+findByName_Name(String name_name): Optional<Plans>
}

interface CrudRepository
{
}

PlansController ..> PlansService: uses>

PlansService ..> PlansRepository: uses>
PlansRepository ..> Plans: <records
PlansController ..> FeeRevisionViewMapper: uses>

@enduml